fixed formattedNumberToNumber()-function to trim whitespaces, improved comments to moving timeline by a year, re-positioned project-cell-input values to the right

--- a/src/components/Planning/PlanningTable/PlanningRow/ProjectRow/styles.css
+++ b/src/components/Planning/PlanningTable/PlanningRow/ProjectRow/styles.css
@@ -119,7 +119,7 @@ tr.active .edit-timeline-button {
 }
 
 .project-cell-input {
-  @apply h-10 w-[85%] border-2 border-transparent !bg-transparent text-center;
+  @apply h-10 w-[85%] border-2 border-transparent !bg-transparent pr-2 text-right;
 }
 
 .project-cell-input-container {
